fix layout issues

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   --btn-hover-color: #474747;
   --a-active-color: #747171;
   --main-font: "Roboto";
+  --card-completed-color: greenyellow;
   background-color: var(--main-color);
 }
 
@@ -10,11 +11,10 @@
   font-family: "Roboto";
 }
 
-
 body {
   padding: 0px;
   margin: 0px;
-  background-image: url("./assets/body_bg.png");
+  background-image: url("/assets/body_bg.png");
   min-height: 100vh;
 }
 
@@ -48,7 +48,8 @@ header {
   align-items: center;
   color: white;
   background-color: var(--main-color);
-  box-shadow: (0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
 nav {
@@ -101,18 +102,17 @@ main {
   cursor: not-allowed;
 }
 
-
 .card:hover {
   border-color: var(--btn-hover-color);
 }
 
 .card-green {
-  border-color: greenyellow;
+  border-color: var(--card-completed-color);
   cursor: unset;
 }
 
 .card-green:hover {
-  border-color: greenyellow;
+  border-color: var(--card-completed-color);
 }
 .card-rotate {
   animation: card-anim 1s linear;
